[Java] Use `Set.of` instead of `HashSet<>(Arrays.asList(...))`.