@@ -15,8 +15,6 @@
  */
 package uk.co.real_logic.sbe;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Pattern;
 
@@ -27,7 +25,7 @@ public class ValidationUtil
 {
     private static final Pattern PATTERN = Pattern.compile("\\.");
 
-    private static final Set<String> C_KEYWORDS = new HashSet<>(Arrays.asList(
+    private static final Set<String> C_KEYWORDS = Set.of(
         "auto", "_Alignas", "_Alignof", "_Atomic", "bool",
         "_Bool", "break", "case", "_Complex",
         "char", "const", "continue", "default",
@@ -36,7 +34,7 @@ public class ValidationUtil
         "int", "long", "_Noreturn", "register", "restrict", "return", "short",
         "signed", "sizeof", "static", "_Static_assert",
         "struct", "switch", "_Thread_local", "true", "typedef", "union",
-        "unsigned", "void", "volatile", "wchar_t", "while"));
+        "unsigned", "void", "volatile", "wchar_t", "while");
 
     /**
      * Check value for validity of usage as a C identifier. A programmatic variable
@@ -114,7 +112,7 @@ public class ValidationUtil
         return Character.isLetterOrDigit(c) || c == '_';
     }
 
-    private static final Set<String> CPP_KEYWORDS = new HashSet<>(Arrays.asList(
+    private static final Set<String> CPP_KEYWORDS = Set.of(
         "alignas", "and", "and_eq", "asm", "auto",
         "bitand", "bitor", "bool", "break", "case",
         "catch", "char", "class", "compl", "const",
@@ -134,7 +132,7 @@ public class ValidationUtil
         // since C++11
         "alignof", "constexpr", "decltype", "nullptr", "static_assert", "thread_local",
         // since C++11 have special meaning, so avoid
-        "final"));
+        "final");
 
     /**
      * Check value for validity of usage as a C++ identifier. A programmatic variable
@@ -212,7 +210,7 @@ public class ValidationUtil
         return Character.isLetterOrDigit(c) || c == '_';
     }
 
-    private static final Set<String> JAVA_KEYWORDS = new HashSet<>(Arrays.asList(
+    private static final Set<String> JAVA_KEYWORDS = Set.of(
         "abstract", "assert", "boolean", "break", "byte",
         "case", "catch", "char", "class", "const",
         "continue", "default", "do", "double", "else",
@@ -223,7 +221,7 @@ public class ValidationUtil
         "return", "short", "static", "strictfp", "super",
         "switch", "synchronized", "this", "throw", "throws",
         "transient", "try", "void", "volatile", "while",
-        "null", "true", "false", "_"));
+        "null", "true", "false", "_");
 
     /**
      * Check string for validity of usage as a Java identifier. Avoiding keywords.
@@ -292,7 +290,7 @@ public class ValidationUtil
     }
 
     /* https://golang.org/ref/spec#Keywords */
-    private static final Set<String> GOLANG_KEYWORDS = new HashSet<>(Arrays.asList(
+    private static final Set<String> GOLANG_KEYWORDS = Set.of(
         "break", "default", "func", "interface", "select",
         "case", "defer", "go", "map", "struct",
         "chan", "else", "goto", "package", "switch",
@@ -310,7 +308,7 @@ public class ValidationUtil
         "nil",
         /* functions */
         "append", "cap", "close", "complex", "copy", "delete", "imag", "len",
-        "make", "new", "panic", "print", "println", "real", "recover"));
+        "make", "new", "panic", "print", "println", "real", "recover");
 
     /**
      * "Check" value for validity of usage as a golang identifier. From:
@@ -398,7 +396,7 @@ public class ValidationUtil
      * Note this does not include the contextual keywords
      * Note "virtual" is no longer but was in early versions of C#
      */
-    private static final Set<String> CSHARP_KEYWORDS = new HashSet<>(Arrays.asList(
+    private static final Set<String> CSHARP_KEYWORDS = Set.of(
         "abstract", "as", "base", "bool", "break",
         "byte", "case", "catch", "char", "checked",
         "class", "const", "continue", "decimal", "default",
@@ -414,7 +412,7 @@ public class ValidationUtil
         "struct", "switch", "this", "throw", "true",
         "try", "typeof", "uint", "ulong", "unchecked",
         "unsafe", "ushort", "using", "using static", "virtual",
-        "void", "volatile", "while"));
+        "void", "volatile", "while");
 
     /**
      * "Check" value for validity of usage as a csharp identifier.
